Fix listado, busca de forma independiente por los campos o con la combinación

--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Login.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Login.xhtml
@@ -16,7 +16,7 @@
 		
 		
 	<ul class="list-group" style="text-align:center">
-	  <li class="list-group-item active">Ingresar a la Aplicacion</li>
+	  <li class="list-group-item active">Ingresar a la Aplicación</li>
 	  <li class="list-group-item">Usuario:
 	  <h:inputText id="usuario" required="true" placeholder="Ingrese un username" maxlength="80" disabled="false" value="#{usuario.usuario}" />
 	  </li>
