--- a/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
@@ -25,8 +25,10 @@
 	  	
 	  	     <div class="form-row" style="margin-left:25px">
 	  		     <div class="form-group col-md-5">
+		   		  
 		   		   <h:outputLabel for="inputUsuario" >Usuario:</h:outputLabel>
-		  		   <h:inputText  id="inputusuario" class="form-control" label="*Usuario*" required="true" a:placeholder="Ingrese un usuario..."  maxlength="80" disabled="false" value="#{usuario.usuario}" >
+		  		   <h:inputText  id="inputusuario" class="form-control" label="*Usuario*" required="true" a:placeholder="Ingrese un usuario..."  
+		  		   maxlength="80" disabled="false" value="#{usuario.usuario}">
 		  		   	 </h:inputText>
 		  		    <h:message for="inputusuario"  style="color:red" ></h:message>
 		  		        </div>
@@ -37,12 +39,11 @@
 			  		<h:message for="inputPass"  style="color:red" ></h:message>
       	         </div>
       	         <div class="form-group col-md-2">
-	   		       <label for="inputTipoUsusaio">TipoUsuario:</label>
-	  	           <h:selectOneMenu value="#{usuario.tipousuario}" class="form-control">
-   				     <f:selectItem itemValue="ADMINISTRADOR" itemLabel="Administrador" />
-   				     <f:selectItem itemValue="EXPERTO" itemLabel="Experto" />
-   				     <f:selectItem itemValue="VOLUNTARIO" itemLabel="Voluntario" />
-			       </h:selectOneMenu>
+	   		       <label for="tipoUsuario" >Tipo de Usuario:</label>
+				    <h:selectOneMenu class="form-control" value="#{usuario.tipousuario}" >
+	   				<f:selectItems value="#{usuario.tiposUsuarios}" var="tipos" itemValue="#{tipos.nombre}" 
+	   				itemLabel="#{tipos.nombre}"></f:selectItems>
+	   				</h:selectOneMenu>
 	             </div>
              </div>
       	      <div class="form-row" style="margin-left:25px"> 
@@ -68,7 +69,8 @@
 			    <h:selectOneMenu value="#{usuario.tipodoc}" class="form-control" >
    			      <f:selectItem itemValue="CI" itemLabel="CI"/>
    			      <f:selectItem itemValue="PASAPORTE" itemLabel="Pasaporte" />
-   			      <f:selectItem itemValue="OTROS" itemLabel="Otros" />
+   			      <f:selectItem itemValue="OTROS" itemLabel="Otros" 
+   			      />
 			    </h:selectOneMenu><br/> 
 	   		 </div>	   
 	         <div class="col-md-3 mb-3">	
@@ -98,7 +100,7 @@
 	
 	</div>
 	
-     <!--  		<h:messages  style="color:red;margin:8px;" class="alert alert-danger"  role="alert"/>-->
+    		  <h:messages  style="color:red;margin:8px;" class="alert alert-danger"  role="alert"/> 
 	</div>	
 	</h:form>
 	
