fix usuario logueado

--- a/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
@@ -39,7 +39,7 @@
 	
 	<div style="display:block; text-align:center; margin-top: 20px" >	
 	<h:link value="Volver" outcome="ListadoObservaciones.xhtml" class="btn btn-outline-dark" />
-	<h:commandButton id="idModificar"  value="Editar Informacion" style="margin-left: 40px" disabled="#{observacion.VerificarTipo()}" action="ModificarObservacion.xhtml" class="btn btn-outline-dark">
+	<h:commandButton id="idModificar"  value="Editar Informacion" style="margin-left: 40px" disabled="#{observacion.VerificarTipo(login.username)}" action="ModificarObservacion.xhtml" class="btn btn-outline-dark">
 	<f:param name="id" value="${observacion.id}" />
 	 </h:commandButton>	
 	</div>
