--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -31,7 +31,7 @@
           </li>
           <li>
             <div class="badge badge-info">
-             #{usuario.usuario} 
+             #{login.username} 
              </div>
           </li>
         </ul>
@@ -58,7 +58,7 @@
 			
 		</h:panelGrid>
 		<h:commandButton value="Buscar"	action="#{observacion.seleccionarObservaciones()}"/>
-		<h:commandLink action="#{usuario.logout}" value="Logout" class="btn btn-outline-dark" style="margin-top: 100px"></h:commandLink>
+		<h:commandLink action="#{login.logout}" value="Logout" class="btn btn-outline-dark" style="margin-top: 100px"></h:commandLink>
 		</h:form>
 
 	<h3 style="text-align:center">Observaciones seleccionadas</h3>
