--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -34,7 +34,7 @@
           </li>
           <li>
             <div class="badge badge-info">
-             #{usuario.usuario}
+             #{login.username}
              </div>
              </li>
         </ul>
