Fix- Diseño en detalle, modificacion y alta.

--- a/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
@@ -19,7 +19,7 @@
 		
 		
 	<ul class="list-group" style="text-align:center">
-	  <li class="list-group-item active">Detalles del Usuario</li>
+	  <li class="list-group-item active bg-success">Detalles del Usuario</li>
 	  <li class="list-group-item">Id: #{usuario.id}</li>
 	  <li class="list-group-item">Usuario: #{usuario.usuarioSeleccionado.usuario}</li>
 	  <li class="list-group-item">Nombre: #{usuario.usuarioSeleccionado.nombre}</li>
@@ -34,7 +34,7 @@
 	</ul>
 	
 	<div style="display:block; text-align:center; margin-top: 20px" >	
-	<h:link value="Volver" outcome="GestionUsuarios.xhtml" class="btn btn-outline-dark" />	
+	<h:link value="Volver" outcome="GestionUsuarios.xhtml" class="btn btn-outline-success" />	
 	</div>
 		<h:messages   style="color:red;margin:8px;" />
 		
