--- a/TareaPDT_JSF/WebContent/GestionObservaciones/ModificarObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/ModificarObservacion.xhtml
@@ -20,7 +20,7 @@
 <h:form id="idDatosEmpleado2">
 
 <ul class="list-group" style="text-align:center">
-	  <li class="list-group-item active">Modificacion de observacion</li>
+	  <li class="list-group-item active bg-success">Modificacion de observacion</li>
 	  <li class="list-group-item">Id:
 	  <h:inputText id="id" required="true" maxlength="80" disabled="true" value="#{observacion.observacionSeleccionada.id}" />
 	  </li>
