--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -16,20 +16,20 @@
   <style>
   /* Make the image fully responsive */
  #myCarousel {
-	border-bottom: 4px solid #FF8F00;
-	width:100%;
+	
+	display: block;
+  margin: 0 auto;
+ width: 100vw;
+height:100vh;
+	
 }
 
 #myCarousel .fill {
 	height: 600px;
 	background-size: cover;
 	background-position: center center;
+	
 }
-
-#home h1 span {
-	font-weight: 300;
-}
-
 @media (max-width: 767px) {
 	#myCarousel .fill {
 		height: 250px;
@@ -39,9 +39,20 @@
 	}
 
 }
+img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  width: 100%;
+}
 
 
-  </style>
+
+
+
+
+
+</style>
 
 </h:head>
 
@@ -51,8 +62,8 @@
     <f:event type="preRenderView" listener="#{usuario.preRenderViewListener()}"/>
 </f:metadata>
 
- <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
-    <div class="container">
+ <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top" style="border-bottom: 4px solid #FF8F00;">
+    <div class="container" >
       <a class="navbar-brand" href="Index.xhtml">Green Place</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -78,13 +89,13 @@
       </div>
     </div>
   </nav>
-  <div id="home" class="container mt-3">
+  <div id="home" class="container mt-3" >
 
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel"  >
 
   <!-- Indicators -->
-  <ul class="carousel-indicators">
+  <ul class="carousel-indicators" >
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
@@ -93,20 +104,20 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="fill" src="../resources/img/2.jpg" style="width:100%; " />
+      <img class="fill" src="../resources/img/2.jpg"  />
       <div class="carousel-caption">
 	       <h2>Incendios</h2>
 	   </div>
 	 </div>  
-    <div class="carousel-item">
-      <img class="fill" src="../resources/img/incendios.jpg" style="width:100%; " />
+    <div class="carousel-item" >
+      <img class="fill" src="../resources/img/incendios.jpg"  />
       <div class="carousel-caption">
 	                    <h2>Forestacion</h2>
 	  </div>
 	  
 	</div>                
     <div class="carousel-item">
-      <img class="fill" src="../resources/img/capincho.jpg"  style="width:100%; "	/>
+      <img class="fill" src="../resources/img/capincho.jpg"  	/>
     
       <div class="carousel-caption">
 	                    <h2>Extincion</h2>
@@ -127,7 +138,7 @@
 </div>
     <div class="container">
 
-    <header class="jumbotron my-4">
+    <header class="jumbotron my-4" style="width: 100vw;">
       <h1 class="display-3">Bienvenido a Green Place!</h1>
       <p class="lead">Desde Green Place creemos que no se puede pasar un solo día sin tener un impacto en el mundo 
       que nos rodea. Lo que hacemos marca la diferencia, y tenemos que decidir qué tipo de diferencia queremos hacer.</p>
