--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -64,40 +64,40 @@
 	<h3 style="text-align:center">Observaciones seleccionadas</h3>
 	<h:form id="formTabla">
 	<h:dataTable value="#{observacion.observacionesFiltradas}"
-		var="observacion"
+		var="obserTabla"
 		  class="table table-striped table-dark">
    
 		<h:column>
 			<f:facet name="header">Codigo</f:facet>    				
-      		 #{observacion.codigo_OBS}
+      		 #{obserTabla.codigo_OBS}
    		</h:column>
 
 		<h:column>
 			<f:facet name="header">Usuario</f:facet>
-		      #{observacion.usuario.usuario}
+		      #{obserTabla.usuario.usuario}
 		</h:column>
 
 		<h:column>
 			<f:facet name="header">Fenomeno</f:facet>
-      		#{observacion.fenomeno.nombreFen}
+      		#{obserTabla.fenomeno.nombreFen}
    		</h:column>
 
 		<h:column>
 			<f:facet name="header">Zona</f:facet>
-      		#{observacion.localidad.departamento.zona.nombre_zona}
+      		#{obserTabla.localidad.departamento.zona.nombre_zona}
 		</h:column>
 		
 		<h:column>
 		<f:facet name="header">Fecha de Observacion</f:facet>
-			<h:outputText value="#{observacion.fecha}" >
+			<h:outputText value="#{obserTabla.fecha}" >
     		<f:convertDateTime pattern="dd/MM/yyyy" />
 			</h:outputText>
 		</h:column>
 		
 		<h:column>
 			<f:facet name="header">Ver Detalle</f:facet>
-			<h:link value="Ver detalle" outcome="DetalleObservacion.xhtml" class="badge badge-success">
-    			<f:param name="id" value="${observacion.id}"/>
+			<h:link value="Ver detalle" outcome="../GestionObservaciones/DetalleObservacion.xhtml" class="badge badge-success">
+    			<f:param name="id" value="${obserTabla.id}"/>
 			</h:link>
 		</h:column>
 	</h:dataTable>
