--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -41,7 +41,7 @@
 	<h:form class="form-group">
 		<h:messages style="color:red;margin:8px;" />
 		<h:commandButton value="Alta de usuario" 	action="AltaUsuario" class="btn btn-outline-success" style="margin-top: 100px"/>
-		<h:commandLink action="#{usuario.logout}" value="Logout" class="btn btn-outline-success" style="margin-top: 101px"></h:commandLink>
+		<h:commandLink action="#{login.logout}" value="Logout" class="btn btn-outline-success" style="margin-top: 101px"></h:commandLink>
 			
 			
 				<div class="form-row">
@@ -69,51 +69,51 @@
 	<h3 style="text-align:center">Usuarios seleccionados</h3>
 	<h:form id="formTabla">
 	<h:dataTable value="#{usuario.usuariosSeleccionados}"
-		var="usuario"
+		var="usuTabla"
 		  class="table table-striped table-dark">
    
 		<h:column>
 			<f:facet name="header">Username</f:facet>    				
-      		#{usuario.usuario}
+      		#{usuTabla.usuario}
    		</h:column>
    		<h:column>
    			<f:facet name="header">TipoUsuario</f:facet>
-   			#{usuario.tipousuario.nombre}
+   			#{usuTabla.tipousuario.nombre}
    		</h:column>
 
 		<h:column>
 			<f:facet name="header">Nombre</f:facet>
-		      #{usuario.nombre}
+		      #{usuTabla.nombre}
 		</h:column>
 
 		<h:column>
 			<f:facet name="header">Apellido</f:facet>
-      		#{usuario.apellido}
+      		#{usuTabla.apellido}
    		</h:column>
 
 		<h:column>
 			<f:facet name="header">Mail</f:facet>
-      		#{usuario.mail}
+      		#{usuTabla.mail}
 		</h:column>
 		
 		<h:column>
 			<f:facet name="header">Ver Detalle</f:facet>
 			<h:link value="Ver detalle" outcome="DetalleUsuario.xhtml" class="badge badge-success">
-    			<f:param name="id" value="${usuario.id}" />
+    			<f:param name="id" value="${usuTabla.id}" />
 			</h:link>
 		</h:column>
 		
 		<h:column>
 			<f:facet name="header">Modificar</f:facet>
 			<h:link value="Modificar usuario" outcome="ModificarUsuario.xhtml" class="badge badge-info">
-    			<f:param name="id" value="${usuario.id}" />
+    			<f:param name="id" value="${usuTabla.id}" />
 			</h:link>
 		</h:column>
 		
 		<h:column>
 			<f:facet name="header">Dar de baja</f:facet>
 			<h:link value="Dar de baja" outcome="BajaUsuario.xhtml" class="badge badge-danger">
-    			<f:param name="id" value="${usuario.id}" />
+    			<f:param name="id" value="${usuTabla.id}" />
 			</h:link>
 		</h:column> 
 		
