Separar estilo en un archivo.

--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -10,87 +10,13 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../resources/css/style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
   /* Make the image fully responsive */
- #myCarousel {
-
-	border-bottom: 4px solid #FF8F00;
-	
-}
-
-#myCarousel .fill {
-	height: 600px;
-	background-size: cover;
-	background-position: center center;
-	
-	
-}
-@media (max-width: 767px) {
-	#myCarousel .fill {
-		height: 250px;
-	}
-	#home h1 {
-		font-size: 26px;
-	}
-#home h1 span {
-	font-weight: 300;
-}
-}
-
-
-#footer {
-	border-top: 4px solid #FF8F00;
-	background-color: #101010;
-	margin-top: 40px;
-	color: #EEEEEE;
-	padding: 40px 0 40px 0;
-	font-size: 16px;
-	
-}
-
-#footer-logo {
-	width: auto;
-	height: 60px;
-	margin-bottom: 20px;
-}
-
-#footer ul {
-	margin: 0;
-	padding: 0;
-	
-}
-
-#footer ul li {
-	list-style: none;
-	margin-bottom: 6px;
-	
-}
-
-#footer ul li a,
-#footer ul li a:visited {
-	color: #EEEEEE;
-	width: 100vw;
-}
-
-
-body {
-	padding-top: 54px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Lato', sans-serif;
-}
-#header {
-	border-bottom: 4px solid #FF8F00;
-}
-
-#header-logo {
-	width: auto;
-	height: 20px;
-}
+ 
 
 
 
