--- a/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
@@ -35,8 +35,7 @@
 	  	    	
 	  	         <div class="form-group col-md-5">
 			       <label for="inputPass" >Password:</label> 
-			  	   <h:inputSecret   label="*Pass Requerida*" id="inputPass" class="form-control" required="true" a:placeholder="Ingrese una password..." maxlength="80" disabled="false" value="#{usuario.pass}" />
-
+					<p:password id="password" label="*Pass Requerida*" feedback="true" class="form-control" required="true" a:placeholder="Ingrese una password..." maxlength="80" disabled="false" value="#{usuario.pass}"/>
       	         </div>
       	         <div class="form-group col-md-3">
 	   		       <label for="tipoUsuario" >Tipo de Usuario:</label>
