--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -5,7 +5,8 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
         xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:c="http://java.sun.com/jsp/jstl/core_1_1"> 
+      xmlns:c="http://java.sun.com/jsp/jstl/core_1_1"
+      xmlns:p="http://primefaces.org/ui"> 
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
@@ -42,8 +43,7 @@
 	  	    	
 	  	         <div class="form-group col-md-4">
 			       <label for="inputPass" >Password:</label> 
-			  	   <h:inputSecret   label="*Pass Requerida*" id="inputPass" class="form-control" required="true" a:placeholder="Ingrese una password..." maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.pass}"/>
-
+					<p:password id="password" label="*Pass Requerida*" feedback="true" class="form-control" required="true" a:placeholder="Ingrese una password..." maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.pass}"/>
       	         </div>
       	         <div class="form-group col-md-3">
 	   		       <label for="tipoUsuario" >Tipo de Usuario:</label>
