--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -107,16 +107,19 @@
   </a>
 </div>
 
+
+
 <div class="container">
 
 	        <div class="row">
 	            <div class="col-lg-12">
-	                <h1 class="page-header">
-	                    Bienvenido a Green Place! 
+	                <h1 class="page-header"><br/>
+	                    Bienvenido a Green Place!
+	                    <hr></hr> 
 	                </h1>
 	            </div>
 	            <div class="col-md-4">
-	                <div class="panel panel-default">
+	                <div class="panel panel-default"><br/>
 	                    <div class="panel-heading">
 	                        <h4><i class="fas fa-car"></i> Usuarios</h4>
 	                    </div>
@@ -127,7 +130,7 @@
 	                </div>
 	            </div>
 	            <div class="col-md-4">
-	                <div class="panel panel-default">
+	                <div class="panel panel-default"><br/>
 	                    <div class="panel-heading">
 	                        <h4><i class="fas fa-bullhorn"></i> Reporte de Observaciones</h4>
 	                    </div>
@@ -138,7 +141,7 @@
 	                </div>
 	            </div>
 	            <div class="col-md-4">
-	                <div class="panel panel-default">
+	                <div class="panel panel-default"><br/>
 	                    <div class="panel-heading">
 	                        <h4><i class="far fa-file-alt"></i> Reportes</h4>
 	                    </div>
