--- a/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
@@ -21,7 +21,7 @@
 		
 	<ul class="list-group" style="text-align:center">
 	  <li class="list-group-item active bg-success">Detalles de Observacion</li>
-	  <li class="list-group-item">Id: #{observacion.id}</li>
+	  <li class="list-group-item">Id: #{observacion.observacionSeleccionada.id}</li>
 	  <li class="list-group-item">Codigo: #{observacion.observacionSeleccionada.codigo_OBS}</li>
 	  <li class="list-group-item">Usuario: #{observacion.observacionSeleccionada.usuario.usuario}</li>
 	  <li class="list-group-item">Fecha: #{observacion.NuevaFecha(observacion.observacionSeleccionada.fecha)}</li>
@@ -39,9 +39,9 @@
 	
 	<div style="display:block; text-align:center; margin-top: 20px" >	
 	<h:link value="Volver" outcome="ListadoObservaciones.xhtml" class="btn btn-success" />
-	<h:commandButton id="idModificar"  value="Editar Informacion" style="margin-left: 40px" disabled="#{observacion.VerificarTipo(login.username)}" action="ModificarObservacion.xhtml" class="btn btn-success">
+	<h:link value="Editar Informacion" outcome="ModificarObservacion.xhtml" class="btn btn-success" disabled="#{observacion.VerificarTipo(login.username)}">
 	<f:param name="id" value="${observacion.id}" />
-	 </h:commandButton>	
+			</h:link>
 	</div>
 		<h:messages style="color:red;margin:8px;" />
 		
