--- a/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
@@ -30,7 +30,7 @@
             <a class="nav-link" href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a>
           </li>
           <li>
-            <div class="badge badge-info">
+            <div class="badge badge-primary">
              #{login.username} 
              </div>
           </li>
