--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -195,8 +195,8 @@
 				<div class="modal-body">
 					<form>
 						<div class="form-group">
-							<label for="name">Nombre</label>
-							<input type="text" name="name" value="" class="form-control" placeholder="Ingresar nombre completo..."/>
+							<label for="name">Asunto</label>
+							<input type="text" name="name" value="" class="form-control" placeholder="Ingresar Asunto..."/>
 						</div><!-- /.form-group -->
 						<div class="form-group">
 							<label for="email">Email</label>
@@ -209,7 +209,7 @@
 					</form>
 				</div>
 				<div class="modal-footer">
-						<a href="mailto:r.damian.boz@gmail.com?Subject=Interesado%20en%20el%20curso" class="btn btn-success">Enviar</a>
+						<a href="mailto:ricardo.boz@estudiantes.utec.edu.uy?body=Escriba su mensaje&amp;subject=Consulta desde el formulario de contacto" class="btn btn-success">Enviar</a>
 				</div>
 			</div><!-- /.modal-content -->
 		</div><!-- /.modal-dialog -->
