--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -106,7 +106,7 @@
     	</h:commandButton>
 	</div>
 	
-	<h:messages   style="color:red;margin:8px;" />
+	 <h:messages errorstyle="color:red" infostyle="color:green"   /> <br />
   </div>
 </h:form>
 
