fix reporte de observaciones

--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -120,7 +120,7 @@
 		
 		<h:column>
 			<f:facet name="header">Ver Detalle</f:facet>
-			<h:link value="Ver detalle" outcome="../GestionObservaciones/DetalleObservacion.xhtml" class="badge badge-success">
+			<h:link value="Ver detalle" outcome="/GestionObservaciones/DetalleObservacion.xhtml" class="badge badge-success">
     			<f:param name="id" value="${obserTabla.id}"/>
 			</h:link>
 		</h:column>
