--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -61,23 +61,23 @@
 					<div class="form-group">
 							<label for="zona">Zona:</label>
 							<h:outputLabel  name="zona"/>
-							<h:selectOneMenu value="#{observaciozona}"  class="form-control" >
+							<h:selectOneMenu value="#{observacion.zona}"  class="form-control" >
 			   					<f:selectItems   value="#{observacion.zonas}" var="zona" itemValue="#{zona.nombre_zona}" 
 			   					itemLabel="#{zona.nombre_zona}" />
 							</h:selectOneMenu>
-					</div>
-					<div class="form-group">
-							<label for="fechahasta">Fecha Hasta:</label>
-							<h:outputLabel  name="fechahasta"/>
-							<p:calendar id="hasta" value="#{observacion.hasta}" outcome="#{observacion.hasta}" var="hasta" mode="popup" pattern="dd/MM/yy" />
 					</div>
 					<div class="form-group">
 							<label for="fechadesde">Fecha Desde:</label>
 							<h:outputLabel  name="fechadesde"/>
 							<p:calendar id="desde" value="#{observacion.desde}" outcome="#{observacion.desde}" var="desde" mode="popup" pattern="dd/MM/yy"  />
 					</div>
+					<div class="form-group">
+							<label for="fechahasta">Fecha Hasta:</label>
+							<h:outputLabel  name="fechahasta"/>
+							<p:calendar id="hasta" value="#{observacion.hasta}" outcome="#{observacion.hasta}" var="hasta" mode="popup" pattern="dd/MM/yy" />
+					</div>
 						
-						<h:commandButton value="Filtrar"	action="#{observacion.seleccionarObservaciones()}" class="btn btn-outline-success"/>
+						<h:commandButton value="Filtrar"	action="#{observacion.seleccionarObservaciones()}" class="btn btn-outline-success"></h:commandButton>
 				 </div>
 				</div>
 		</div>
