--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -40,7 +40,7 @@
 	
 	<h:form class="form-group">
 		<h:messages style="color:red;margin:8px;" />
-		<h:commandButton value="Alta de usuario" 	action="AltaUsuario" class="btn btn-outline-success" style="margin-top: 100px"/>
+		<h:commandLink value="Alta de usuario" 	action="AltaUsuario" class="btn btn-outline-success" style="margin-top: 100px"></h:commandLink>
 		<h:commandLink action="#{login.logout}" value="Logout" class="btn btn-outline-success" style="margin-top: 101px"></h:commandLink>
 			
 			
@@ -56,7 +56,7 @@
 					<h:inputText id="nombre" value="#{usuario.nombre}" class="form-control" />
 			    </div>
 			    <div class="form-group col-md-3" style="margin-top: 132px">
-					<h:commandLink action="#{usuario.seleccionarUsuarios()}" value="Filtrar" class="btn btn-outline-success"></h:commandLink>
+					<h:commandButton action="#{usuario.seleccionarUsuarios()}" value="Filtrar" class="btn btn-outline-success"></h:commandButton>
    			    </div>
    			   </div> 
 				
