--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -175,7 +175,7 @@
 				<div class="col-md-3">
 					<ul>
 						<li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
-						<li><a href="#" data-toggle="modal" data-target="#contacto-modal">Contacto</a></li>
+						<li><a href="mailto:404NotFound@gmail.com?body=Escriba su mensaje&amp;subject=Consulta desde el formulario de contacto">Contacto</a></li>
 					</ul>
 				</div><!-- /.col -->
 				<div class="col-md-3">
@@ -189,24 +189,7 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">	
-					<h4 class="modal-title">Contacto</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				</div>
-				<div class="modal-body">
-					<form>
-						<div class="form-group">
-							<label for="name">Asunto</label>
-							<input type="text" name="name" value="" class="form-control" placeholder="Ingresar Asunto..."/>
-						</div><!-- /.form-group -->
-						<div class="form-group">
-							<label for="email">Email</label>
-							<input type="email" name="email" value="" class="form-control" placeholder="Ingresar Email..."/>
-						</div><!-- /.form-group -->
-						<div class="form-group">
-							<label for="message">Mensaje</label>
-							<textarea name="message" rows="8" cols="40" class="form-control" placeholder="Ingresar mensaje..."/>
-						</div><!-- /.form-group -->
-					</form>
 				</div>
 				<div class="modal-footer">
 						<a href="mailto:ricardo.boz@estudiantes.utec.edu.uy?body=Escriba su mensaje&amp;subject=Consulta desde el formulario de contacto" class="btn btn-success">Enviar</a>
